Fixing build artifact detection (attempt #5)

--- a/.ci/postbuild.yml
+++ b/.ci/postbuild.yml
@@ -33,7 +33,7 @@ steps:
   - pwsh: |
       $directories = Get-ChildItem -Path '${{ parameters.sourceDirectory }}' -Directory -Recurse | Where-Object { $_.FullName -match "\\(bin|obj)\\${{ parameters.buildConfiguration }}$" }
       $directories | Foreach-Object {
-        Get-ChildItem -Path $directory -Include @( "*.nupkg", "*.nuspec" ) -File -Recurse | Copy-Item -Destination '${{ parameters.nugetArtifactDirectory }}'
+        Get-ChildItem -Path $directory -Include @( "*.nupkg", "*.nuspec" ) -File -Recurse | Copy-Item -Force -Destination '${{ parameters.nugetArtifactDirectory }}'
       }
     displayName: Consolidate NuGet artifacts
 
