Moved test results gathering to be more generic

--- a/.ci/postbuild.yml
+++ b/.ci/postbuild.yml
@@ -27,6 +27,8 @@ steps:
           Copy-Item -Verbose -Path $_.FullName -Destination $dest
         }
       }
+      Get-ChildItem -File '*.log' -File -Recurse | Copy-Item -Verbose -Destination '${{ parameters.buildArtifactDirectory }}'
+      Get-ChildItem -File '*.binlog' -File -Recurse | Copy-Item -Verbose -Destination '${{ parameters.buildArtifactDirectory }}'
     displayName: Consolidate build artifacts
 
   - pwsh: |
