Fixed file reference for test results.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,10 +55,7 @@ stages:
             displayName: 'Publish Test Results'
             inputs:
               testResultsFormat: xUnit
-              testResultsFiles: |
-                'TestResults/**'
-                '**/*.xml'
-                '**/*.trx'
+              testResultsFiles: 'TestResults\**'
               searchFolder: $(netSdkPath)
               configuration: $(buildConfiguration)
 
