--- a/samples/aspnet6/appsettings.json
+++ b/samples/aspnet6/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "AppDbContext": "Server=(localdb)\\mssqllocaldb;Database=TodoItemsSample;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
