--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -126,20 +126,21 @@ stages:
           - task: PublishSecurityAnalysisLogs@3
             displayName: 'Publish security analysis logs'
 
-  - stage: sign
-    displayName: Sign SDK
-    dependsOn: [ 'build' ]
-    jobs:
-      - job: presign
-        displayName: Pre-signing Tasks
-        steps: 
-        - task: PublishBuildArtifacts@1
-          displayName: Publish SignList.xml
-          inputs:
-            pathtoPublish: '$(netSdkPath)/SignList.xml'
-            artifactName: nuget
-
-      - template: sign-artifacts/jobs/v2.yml@internal-templates
-        parameters:
-          codeSignOverride: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
-  
+# Disabled because it requires the sign-artifacts to be updated to use new pools
+#  - stage: sign
+#    displayName: Sign SDK
+#    dependsOn: [ 'build' ]
+#    jobs:
+#      - job: presign
+#        displayName: Pre-signing Tasks
+#        steps: 
+#        - task: PublishBuildArtifacts@1
+#          displayName: Publish SignList.xml
+#          inputs:
+#            pathtoPublish: '$(netSdkPath)/SignList.xml'
+#            artifactName: nuget
+#
+#      - template: sign-artifacts/jobs/v2.yml@internal-templates
+#        parameters:
+#          codeSignOverride: startsWith(variables['Build.SourceBranch'], 'refs/tags/')
+#  
