--- a/sdk/dotnet/test/Microsoft.Datasync.Client.Test/Microsoft.Datasync.Client.Test.csproj
+++ b/sdk/dotnet/test/Microsoft.Datasync.Client.Test/Microsoft.Datasync.Client.Test.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-
+    <IncludeBuildOutput>false</IncludeBuildOutput>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
